force-app/main/default/objects/nFORCE__Section__mdt/nFORCE__Section__mdt.object-meta.xml
<CustomObject>
    <description>This object is reserved for future use.</description>
    <label>Section</label>
    <pluralLabel>Sections</pluralLabel>
</CustomObject>