force-app/main/default/objects/nFORCE__Section__mdt/fields/nFORCE__Attributes__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Attributes__c</fullName>
    <description>Used to hold any additional information about this section</description>
    <label>-D Attributes</label>
    <length>1</length>
    <type>Text</type>
</CustomField>