force-app/main/default/objects/nFORCE__Section__mdt/fields/nFORCE__Content_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Content_Name__c</fullName>
    <label>-D Content Name</label>
    <length>1</length>
    <type>Text</type>
</CustomField>