force-app/main/default/objects/nFORCE__Section__mdt/fields/nFORCE__Has_Resource__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Has_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if this record has resources</description>
    <label>Has_Resource</label>
    <type>Checkbox</type>
</CustomField>