force-app/main/default/objects/nFORCE__Section__mdt/fields/nFORCE__Order__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Order__c</fullName>
    <description>Determines the display order in the menu</description>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>